# cv1800b-baremetal

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  linker.ld
.devcontainer/: devcontainer.json
cmake/: riscv64-baremetal.cmake
scripts/: flash.sh
src/: main.c  startup.c  term.c  term.h  uart.c  uart.h
